k8s/manifest/wordpress/helper.yaml
apiVersion: v1
kind: Pod
metadata:
  name: upload-helper
  namespace: wordpress
spec:
  volumes:
    - name: wp-storage
      persistentVolumeClaim:
        claimName: wordpress-pvc
  containers:
    - name: helper
      image: busybox
      command: ["sleep", "3600"]
      volumeMounts:
        - name: wp-storage
          mountPath: /data
